fix: course image height on IOS Safari
Course thumbnails on IOS Safari stretch to the full height of the image,
instead of being limited by width and preserving aspect ratio. This
seems to be a IOS Safari specific behavior[1], and can be fixed by
setting height to auto, while width is set to 100%.

This issues is specific to the context of the course card, so we are
fixing it by setting the height in the course card css, instead of
fixing it globally in the Paragon styles, which wouldn't work in all
contexts.

1: https://stackoverflow.com/a/44250830

--- a/src/containers/CourseCard/CourseCard.scss
+++ b/src/containers/CourseCard/CourseCard.scss
@@ -8,6 +8,7 @@
     }
     .pgn__card-image-cap {
       border-bottom-left-radius: 0 !important;
+      height: auto !important;
     }
     .overflow-visible {
       overflow: visible;
